--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Nicolás Medín</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="referrer" content="origin">
 	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
