--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<title>Nicolás Medín</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<meta name="referrer" content="origin">
 	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
@@ -771,13 +770,16 @@
 			</header>
 			<div class="row">
 				<div class="col-12">
-					<form method="post" action="http://formspree.io/medincrespo@gmail.com">
+					  <form action="https://formspree.io/f/xeqpbbnv" method="POST">
 						<div class="row">
 							<div class="col-6 col-12-small">
-								<input type="email" name="_replyto" id="email" placeholder="Email" />
+								<input type="text" name="name" id="name" placeholder="Nombre" />
+							</div>
+							<div class="col-6 col-12-small">
+								<input type="text" name="_replyto" id="email" placeholder="Email" />
 							</div>
 							<div class="col-12">
-								<textarea name="body" id="message" placeholder="Mensaje"></textarea>
+								<textarea name="message" id="message" placeholder="Mensaje"></textarea>
 							</div>
 							<div class="col-12">
 								<input type="submit" value="Send" />
