Versión inicial definitiva

--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
 		<div class="container">
 			<header>
 				<h2>Estos son mis proyectos</h2>
-				<p>Tendrás el código en mi perfil de GitHub que encontrarás en la parte de abajo, y una vista al
+				<p>Tendrás el código en mi perfil de GitHub que encontrarás en la parte de abajo, así como una vista al
 					proyecto al hacer click.</p>
 			</header>
 			<div class="row">
