--- a/index.html
+++ b/index.html
@@ -731,6 +731,7 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="#" class="image featured"><img src="images/EnConstruccion.jpg" alt="" /></a>
+						<h3>EN CONSTRUCCIÓN</h3>
 						<h3><a href="#">Recopilación de scripts de administración de SQL Server</a></h3>
 						<p>Recopilación tras dos años de administración de SQL Server</p>
 						<!-- Cuadrar final -->
@@ -740,6 +741,7 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="#" class="image featured"><img src="images/EnConstruccion.jpg" alt="" /></a>
+						<h3>EN CONSTRUCCIÓN</h3>
 						<h3><a href="#">Primer proyecto simple utilizando Java EE</a></h3>
 						<p>Aquí se subirá el primer proyecto hecho con Java EE y base de datos MySQL</p>
 						<!-- Cuadrar final -->
@@ -749,13 +751,14 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="#" class="image featured"><img src="images/EnConstruccion.jpg" alt="" /></a>
-						<h3><a href="#">Aquí se subirá el primer proyecto avanzado utiliando Spring</a></h3>
+						<h3>EN CONSTRUCCIÓN</h3>
+						<h3><a href="#">Primer proyecto avanzado utilizando Spring</a></h3>
 						<p>Aquí se subirá el primer proyecto hecho con Spring y base de datos SQL Server</p>
 					</article>
 				</div>
 			</div>
 			<footer>
-				<p>¿Te han gustado mis proyecto, o te interesa mi perfil?</p>
+				<p>¿Te han gustado mis proyectos, o te interesa mi perfil?</p>
 				<a href="#contact" class="button large scrolly">Contáctame!</a>
 			</footer>
 		</div>
