Con botón GMAIL

--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
 					</form>
 				</div>
 				<div class="col-12">
-					<h3>Además, puedes encontrarme en ...</h3>
+					<h3>Además, puedes contactar conmigo o encontrarme en ...</h3>
 					<ul class="social">
 						<li><a href="hzzzttps://www.linkedin.com/in/nicol%C3%A1s-med%C3%ADn-b07100197/">
 								<img src="https://img.icons8.com/fluent/48/000000/linkedin.png" />
@@ -799,6 +799,9 @@
 						<li><a href="https://github.com/N-Medin">
 								<img src="https://img.icons8.com/metro/48/000000/github.png" />
 							</a></li>
+						<li><a href="mailto:medincrespo@gmail.com">
+							<img src="https://img.icons8.com/fluent/48/000000/gmail--v2.png" />
+						</a></li>
 					</ul>
 				</div>
 			</div>
