--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
 								<textarea name="message" id="message" placeholder="Mensaje"></textarea>
 							</div>
 							<div class="col-12">
-								<input type="submit" value="Send" />
+								<input type="submit" value="Enviar" />
 							</div>
 						</div>
 					</form>
