--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
 				<div class="col-12">
 					<h3>Además, puedes contactar conmigo o encontrarme en ...</h3>
 					<ul class="social">
-						<li><a href="hzzzttps://www.linkedin.com/in/nicol%C3%A1s-med%C3%ADn-b07100197/">
+						<li><a href="https://www.linkedin.com/in/nicol%C3%A1s-med%C3%ADn-b07100197/">
 								<img src="https://img.icons8.com/fluent/48/000000/linkedin.png" />
 							</a></li>
 						<li><a href="https://github.com/N-Medin">
@@ -801,6 +801,9 @@
 							</a></li>
 						<li><a href="mailto:medincrespo@gmail.com">
 							<img src="https://img.icons8.com/fluent/48/000000/gmail--v2.png" />
+						</a></li>
+						<li><a href="https://www.instagram.com/n_medin.dev/">
+							<img src="https://img.icons8.com/fluent/48/000000/instagram-new.png"/>
 						</a></li>
 					</ul>
 				</div>
