--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
 						<li><a href="mailto:medincrespo@gmail.com">
 							<img src="https://img.icons8.com/fluent/48/000000/gmail--v2.png" />
 						</a></li>
-						<li><a href="https://www.instagram.com/n_medin.dev/">
+						<li><a href="https://www.instagram.com/ene.me.dev/">
 							<img src="https://img.icons8.com/fluent/48/000000/instagram-new.png"/>
 						</a></li>
 					</ul>
