Cambios Spring Jenkins

--- a/index.html
+++ b/index.html
@@ -357,8 +357,6 @@
 										Manejo de Java Enterprise Edition (Java EE), creación de Servlets y Java Server
 										Pages (JSP)
 									</p>
-									<!-- Cuadrar final -->
-									<br>
 								</section>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
@@ -368,19 +366,16 @@
 									</span>
 									<h3>Spring Framework</h3>
 									<p>
-										Spring Core, manejo de anotaciones.
+										Spring Core, manejo de anotaciones, beans, inyección de dependencias.
 									</p>
 									<p>
-										Spring MVC, arquitectura Modelo Vista Controlador.
-									</p>
-									<p>
-										Spring Boot, creación de APIs REST.
+										Spring MVC, Spring Boot y Spring JPA aprendiendo actualmente.
 									</p>
 									<p>
 										Spring Security, autenticación basada en tokens con SWT.
 									</p>
 									<p>
-										Spring JPA.
+										
 									</p>
 								</section>
 							</div>
@@ -444,8 +439,6 @@
 									<p>
 										Aprendiendo actualmente
 									</p>
-									<!-- Cuadrar final -->
-									<br><br><br><br><br><br><br><br><br>
 								</section>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
@@ -667,7 +660,7 @@
 									</span>
 									<h3>Jenkins</h3>
 									<p>
-										Automatización de pruebas
+										Aprendiendo actualmente
 									</p>
 									<br><br>
 								</section>
