--- a/index.html
+++ b/index.html
@@ -357,8 +357,6 @@
 										Manejo de Java Enterprise Edition (Java EE), creación de Servlets y Java Server
 										Pages (JSP)
 									</p>
-									<!-- Cuadrar final -->
-									<br>
 								</section>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
@@ -368,19 +366,16 @@
 									</span>
 									<h3>Spring Framework</h3>
 									<p>
-										Spring Core, manejo de anotaciones.
+										Spring Core, manejo de anotaciones, beans, inyección de dependencias.
 									</p>
 									<p>
-										Spring MVC, arquitectura Modelo Vista Controlador.
-									</p>
-									<p>
-										Spring Boot, creación de APIs REST.
+										Spring MVC, Spring Boot y Spring JPA aprendiendo actualmente.
 									</p>
 									<p>
 										Spring Security, autenticación basada en tokens con SWT.
 									</p>
 									<p>
-										Spring JPA.
+										
 									</p>
 								</section>
 							</div>
@@ -444,8 +439,6 @@
 									<p>
 										Aprendiendo actualmente
 									</p>
-									<!-- Cuadrar final -->
-									<br><br><br><br><br><br><br><br><br>
 								</section>
 							</div>
 							<div class="col-4 col-6-medium col-12-small">
@@ -667,7 +660,7 @@
 									</span>
 									<h3>Jenkins</h3>
 									<p>
-										Automatización de pruebas
+										Aprendiendo actualmente
 									</p>
 									<br><br>
 								</section>
@@ -724,14 +717,13 @@
 		<div class="container">
 			<header>
 				<h2>Estos son mis proyectos</h2>
-				<p>Tendrás el código en mi perfil de GitHub que encontrarás en la parte de abajo, así como una vista al
+				<p>Tendrás el código en mi perfil de GitHub que encontrarás en la parte de abajo, y una vista al
 					proyecto al hacer click.</p>
 			</header>
 			<div class="row">
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="#" class="image featured"><img src="images/EnConstruccion.jpg" alt="" /></a>
-						<h3>EN CONSTRUCCIÓN</h3>
 						<h3><a href="#">Recopilación de scripts de administración de SQL Server</a></h3>
 						<p>Recopilación tras dos años de administración de SQL Server</p>
 						<!-- Cuadrar final -->
@@ -741,7 +733,6 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="#" class="image featured"><img src="images/EnConstruccion.jpg" alt="" /></a>
-						<h3>EN CONSTRUCCIÓN</h3>
 						<h3><a href="#">Primer proyecto simple utilizando Java EE</a></h3>
 						<p>Aquí se subirá el primer proyecto hecho con Java EE y base de datos MySQL</p>
 						<!-- Cuadrar final -->
@@ -751,14 +742,13 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="#" class="image featured"><img src="images/EnConstruccion.jpg" alt="" /></a>
-						<h3>EN CONSTRUCCIÓN</h3>
-						<h3><a href="#">Primer proyecto avanzado utilizando Spring</a></h3>
+						<h3><a href="#">Aquí se subirá el primer proyecto avanzado utiliando Spring</a></h3>
 						<p>Aquí se subirá el primer proyecto hecho con Spring y base de datos SQL Server</p>
 					</article>
 				</div>
 			</div>
 			<footer>
-				<p>¿Te han gustado mis proyectos, o te interesa mi perfil?</p>
+				<p>¿Te han gustado mis proyecto, o te interesa mi perfil?</p>
 				<a href="#contact" class="button large scrolly">Contáctame!</a>
 			</footer>
 		</div>
@@ -773,38 +763,29 @@
 			</header>
 			<div class="row">
 				<div class="col-12">
-					  <form action="https://formspree.io/f/xeqpbbnv" method="POST">
+					<form method="post" action="http://formspree.io/medincrespo@gmail.com">
 						<div class="row">
 							<div class="col-6 col-12-small">
-								<input type="text" name="name" id="name" placeholder="Nombre" />
-							</div>
-							<div class="col-6 col-12-small">
-								<input type="text" name="_replyto" id="email" placeholder="Email" />
+								<input type="email" name="_replyto" id="email" placeholder="Email" />
 							</div>
 							<div class="col-12">
-								<textarea name="message" id="message" placeholder="Mensaje"></textarea>
+								<textarea name="body" id="message" placeholder="Mensaje"></textarea>
 							</div>
 							<div class="col-12">
-								<input type="submit" value="Enviar" />
+								<input type="submit" value="Send" />
 							</div>
 						</div>
 					</form>
 				</div>
 				<div class="col-12">
-					<h3>Además, puedes contactar conmigo o encontrarme en ...</h3>
+					<h3>Además, puedes encontrarme en ...</h3>
 					<ul class="social">
-						<li><a href="https://www.linkedin.com/in/nicol%C3%A1s-med%C3%ADn-b07100197/">
+						<li><a href="hzzzttps://www.linkedin.com/in/nicol%C3%A1s-med%C3%ADn-b07100197/">
 								<img src="https://img.icons8.com/fluent/48/000000/linkedin.png" />
 							</a></li>
 						<li><a href="https://github.com/N-Medin">
 								<img src="https://img.icons8.com/metro/48/000000/github.png" />
 							</a></li>
-						<li><a href="mailto:medincrespo@gmail.com">
-							<img src="https://img.icons8.com/fluent/48/000000/gmail--v2.png" />
-						</a></li>
-						<li><a href="https://www.instagram.com/ene.me.dev/">
-							<img src="https://img.icons8.com/fluent/48/000000/instagram-new.png"/>
-						</a></li>
 					</ul>
 				</div>
 			</div>
